
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================

Gepi-1.7.3 (04/04/2018)
===========================

Carnets de notes:
- Possibilité de faire apparaitre une moyenne générale sur les relevés de notes 
  (malgré toutes les réserves sur la représentativité de cette moyenne).
- Prise en compte de la date d'entrée dans l'établissement pour ne pas proposer 
  la saisie de note si le devoir est antérieur à l'entrée de l'élève.
- Possibilité de limiter la taille du logo établissement sur le relevé de notes HTML.

Bulletins:
- Possibilité de limiter la taille du logo établissement sur le bulletin HTML.

Discipline:
- Possibilité de définir des utilisateurs spécifiques individuels comme destinataires 
  des alertes sur les incidents disciplinaires 
  (par exemple les comptes Assistante sociale, Infirmière,...).

Trombinoscopes:
- Encodage par défaut des photos avec extension de la chaine aléatoire.

Examens blancs:
- Possibilité d'insérer le fichier signature comme dans les bulletins.

LSUN:
- Possibilité d'exporter au format 2017 comme au format (LSU 18.2.0.0) qui doit
  être déployé à compter du 27/04/2018.
  Cela comprend le dispositif devoirs-faits et les langue_vivante_regionale.

Général:
- Prise en compte des modifications Siècle (30/03/18) pour les NIVEAU_RESPONSABILITE 
  et CODE_PARENTE des responsables (avec suppression des responsables légaux 1 
  et 2 dans Siècle).
- Possibilité de paramétrer (dans Gestion générale/Configuration générale) le 
  fait que des langues vivantes régionales enseignées dans l'établissement
  et possibilité d'en saisir le niveau atteint ou non pour un export en fin de cycle 4.


Gepi-1.7.2 (06/01/2018)
===========================

Bulletins:
- Bulletins 2016: Possibilité d'imprimer le bulletin de fin de cycle.
- Bulletins PDF classiques: Possibilité d'afficher une ligne moyenne générale annuelle.