@@ -1149,3 +1149,67 @@ function corriger_espaces_et_casse_ponctuation(chaine) {
 	return chaine3;
 }
 
+// fonction permettant l'utilisation des touches flèche vers le haut ou vers le bas
+// pour passer d'un champ à un autre
+function clavier_note(n,e){
+	touche= e.keyCode ;
+
+	/*
+	UP 38
+	DOWN 40
+	a 65
+	d 68
+	- 54
+	*/
+
+	if (touche == '38') {
+		id="n";
+		id=id.concat((parseInt(n.substr(1))-1).toString(10));
+		if (document.getElementById(id)) document.getElementById(id).focus();
+	}
+	else if ((touche == '40')||(touche == '65')||(touche == '68')||(touche == '54')) {
+		// Si on a flèche down, a, d ou - on passe à la ligne suivante.
+		id="n";
+		id=id.concat((parseInt(n.substr(1))+1).toString(10));
+		if (document.getElementById(id)) document.getElementById(id).focus();
+	}
+	else {
+		if(document.getElementById('cn_mode_saisie')) {
+			mode=document.getElementById('cn_mode_saisie').value;
+			if(mode==1) {
+				// Si on a un chiffre après la virgule ou le point, on passe à la ligne suivante
+				id="n";
+				id=id.concat(parseInt(n.substr(1)).toString(10));
+				if (document.getElementById(id)) {
+					valeur=document.getElementById(id).value;
+					//if(valeur.substr(0, valeur.length-2)) {
+					if((valeur.match(/\.[0-9]{1,}$/))||(valeur.match(/,[0-9]{1,}$/))) {
+						id="n";
+						id=id.concat((parseInt(n.substr(1))+1).toString(10));
+						if (document.getElementById(id)) document.getElementById(id).focus();
+					}
+				}
+			}
+			else if(mode==2) {
+				// On considère que l'on tape trois chiffres pour chaque note:
+				//   120 pour 12.0/20
+				//   085 pour 08.5/20
+				//   050 pour 05.0/20
+				id="n";
+				id=id.concat(parseInt(n.substr(1)).toString(10));
+				if (document.getElementById(id)) {
+					valeur=document.getElementById(id).value;
+					//if(valeur.substr(0, valeur.length-2)) {
+					if(valeur.length==3) {
+						document.getElementById(id).value=valeur/10;
+						id="n";
+						id=id.concat((parseInt(n.substr(1))+1).toString(10));
+						if (document.getElementById(id)) document.getElementById(id).focus();
+					}
+				}
+			}
+		}
+	}
+}
+
+
