@@ -6,6 +6,10 @@
 Gepi-master (Version de développement)
 ===========================
 
+Carnets de notes:
+- Ajout de modes de saisie de notes pour passer plus vite à la saisie de la note suivante.
+
+
 Gepi-1.7.3 (04/04/2018)
 ===========================
 
